<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="50dp"
            android:id="@+id/imgAvatarProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/fastfood"
            app:civ_border_color="#FF0000"
            app:civ_border_width="1dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:id="@+id/ProfileDetail"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/imgAvatarProfile"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/person"
                    android:layout_width="25dp"
                    android:layout_height="25dp">
                </ImageView>

                <EditText
                    android:layout_marginRight="20dp"
                    android:id="@+id/etProfileFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Profilename"
                    android:padding="10dp"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/email"
                    android:layout_width="25dp"
                    android:layout_height="25dp">
                </ImageView>

                <EditText
                    android:hint="@string/ProfileUser"
                    android:padding="10dp"
                    android:id="@+id/etProfileEmail"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/phone"
                    android:layout_width="25dp"
                    android:layout_height="25dp">
                </ImageView>

                <EditText
                    android:hint="@string/ProfilePhone"
                    android:padding="10dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/etProfilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></EditText>

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfileDetail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btnChange"
            android:layout_width="230dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_button"
            android:text="Save"
            android:textColor="@color/white"
            android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>